# VRService

./: .gitlab-ci.yml  README.md
src/: CMakeLists.txt  CompilerHints.h  Config.cc  Config.h  Group.cc  Group.h  HTTPRequestGETHandler.h  HTTPRequestHandler.h  HTTPRequestMethodHandler.h  HTTPServer.cc  HTTPServer.h  InetUtils.cc  InetUtils.h  Logger.cc  Logger.h  Permissions.h  PostgresSQLResourceAcquirer.cc  PostgresSQLResourceAcquirer.h  PostgresSQLResourceAdquirer.cc  PostgresSQLResourceAdquirer.h  Resource.h  ResourceAcquirer.h  ResourceAdquirer.h  ResourceFile.cc  ResourceFile.h  ResourceFolder.cc  ResourceFolder.h  ResourceMapper.cc  ResourceMapper.h  ResourceView.cc  ResourceView.h  ResourcesView.cc  ResourcesView.h  TimeMeasurer.h  URIUtils.cc  URIUtils.h  User.cc  User.h  main.cc  test.cc
src/cmake_modules/: Findpqxx.cmake
